# opencv-video-capturer-sdk

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  IVideoManager.cpp  engine.cpp
src/CMake/Modules/common/: VideoManagerConfig.cmake
src/include/: IVideoManager.h  engine.h
